--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ azure-core==1.32.0
 azure-identity==1.19.0
 backoff==2.2.1
 bcrypt==4.2.0
-blinker==1.8.2
+blinker>=1.8.2
 blis==0.7.11
 build==1.2.2
 CacheControl==0.14.0
